# mlphon

./: Dockerfile  IPAGenerator.fst  IPAmap.fst  LICENSE  Makefile  Makefile.inc  PhoneAnalyser.fst  README.md  allsymbols.fst  alphabets.fst  g2p.fst  inherentvoweladd.fst  inputfilter.fst  lettertag.fst  ml2ipa.fst  notes.md  phoneanalyser.fst  phoneticmap.fst  phoneticreplace.fst  removeWordBoundary.fst  removeatomic_chillu.fst  removeimplicitvowels.fst  removetags.fst  schwa.fst  syllable.fst  syllablizer.fst  tagfilter.fst  tta_nta.fst  wordfilter.fst
fst/: IPAmap.fst  Makefile  alphabets.fst  alveolarnasal.fst  analysis.fst  g2p.fst  inherentvowel.fst  labiodentalfricative.fst  ml2ipa.fst  normalize.fst  removeWordBoundary.fst  reph.fst  rephexp.fst  schwa.fst  syllable.fst  syllablizer.fst  tagfilter.fst  tta_nta.fst  wordfilter.fst
python/: IPAGenerator.py  LICENSE.txt  MANIFEST.in  Makefile  README.rst  fsa.py  mlg2p.py  phoneanalyser.py  setup.cfg  setup.py  syllablizer.py
python/mlphon/: __init__.py  cli.py  g2p.py  ml2ipa.py  phonetic_analyser.py  phonetic_analysis.py  syllable_analyser.py  syllablizer.py  tagparse.py  utilities.py
test/: IPAandTags.txt  data.tsv  data_g2p.tsv  data_p2g.tsv  data_syllable.tsv  g2p-test.py  mlText.txt  mlg2p-test.py  p2g-test.py  phoneanalyser-test.py  syllable-test.tsv  syllablizer-test.py
web/: .eslintrc.json  ml-phon-web.py  mlphon-apache2.conf.example  mlphon.wsgi  mlphonweb.py  package-lock.json  requirements.txt
web/static/: main.js  style.css
web/templates/: index.html
