
[metadata]
name = mlphon
author = Kavya Manohar
author-email = sakhi.kavya@gmail.com
description = Malayalam morphology analyser
long_description = file: README.rst
keywords = Malayalam phonetic FST analyser generator IPA syllable
license = MIT
license-file = LICENSE.txt
url = https://gitlab.com/smc/mlphon
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
include_package_data = True
packages = mlphon
install_requires=
    regex
    hfst

[options.package_data]
*=data/*.a
